--- a/Tvflix/detail.html
+++ b/Tvflix/detail.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Tvflix" />
+    <!-- primary meta tags -->
     <meta
       name="description"
       content="Tvflix is a movie recommendation app made for my project work. #CAP615"
@@ -18,13 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!-- Title -->
-    <title>Tvflix | Home</title>
     <!-- StyleSheet : CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Scripting : JS -->
     <script src="assets/js/global.js" defer></script>
-    <script src="assets/js/index.js" type="module"></script>
+    <script src="assets/js/detail.js" type="module"></script>
   </head>
   <body>
     <!-- Header -->
@@ -68,10 +67,6 @@
         </button>
       </div>
 
-      <a href="../SignIn&SignUp/index.html" class="btn-login"
-        ><span>Sign In</span></a
-      >
-
       <button class="search-btn" search-toggler menu-close>
         <img
           src="./assets/images/search.png"
@@ -98,7 +93,6 @@
         />
       </button>
     </header>
-
     <main>
       <!-- Sidebar -->
       <nav class="sidebar" sidebar></nav>
